feat: add user crud and migration
